Resolves fdo#81213: Wrong table-clause generated by reportbuilder

Oracle doesn't accept "AS" for making an alias from a table
See https://bugs.freedesktop.org/show_bug.cgi?id=81213#c2
https://bugs.freedesktop.org/show_bug.cgi?id=81213#c4
https://bugs.freedesktop.org/show_bug.cgi?id=81213#c5
for more information

(thank you Lionel)

Cherry-picked from 568778874429595855b435792e5ebecd52956dae

Conflicts:
	connectivity/source/drivers/odbc/ODriver.cxx
	dbaccess/source/core/dataaccess/ModelImpl.cxx

Change-Id: I33c86d78b2590116d4af46ffd3e54c3c791268ea