connectivity/source/drivers/odbc/ODriver.cxx
@@ -178,7 +178,7 @@ Sequence< DriverPropertyInfo > SAL_CALL ODBCDriver::getPropertyInfo( const OUStr
                 OUString("GenerateASBeforeCorrelationName")
                 ,OUString("Generate AS before table correlation names.")
                 ,sal_False
-                ,OUString(  "true"  )
+                ,OUString(  "false"  )
                 ,aBooleanValues)
                 );
         aDriverInfo.push_back(DriverPropertyInfo(
